# arvo

./: .gitignore  .travis.yml  Cargo.toml  README.md  test.go
docs/compiler/: get-started.md  intermediate-representations.md
docs/examples/: helloWorld.arvo  producerConsumer.arvo
docs/specification/: syntax.md
docs/tutorials/: doThen.md  functions.md  modules.md  objects.md
examples/: channels.arvo  functions.arvo  hello.arvo  maths.arvo
src/: compile.rs  lib.rs  main.rs  repl.rs
src/air/: context.rs  macros.rs  mod.rs  prelude.rs  visitor.rs
src/ast/: macros.rs  mod.rs  prelude.rs  visitor.rs
src/bair/: macros.rs  mod.rs
src/builder/: llvm.rs  llvm_test.rs  mod.rs
src/identifier/: mod.rs
src/lexer/: mod.rs  span.rs  span_test.rs  token.rs  token_test.rs
src/libprelude/: Cargo.toml  lib.rs
src/libruntime/: Cargo.toml  lib.rs
src/noir/: context.rs  macros.rs  mod.rs  prelude.rs  runtime.rs  visitor.rs
src/normaliser/: mod.rs
src/parser/: macros.rs  mod.rs  mod_test.rs
src/parser/grammar/: parser.c  parser.h  parser.lex  parser.y
src/resolver/: mod.rs
src/token/: mod.rs  test.rs
